# dokime

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  name_candidates.md  objects.inv  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/attribution/: index.html
api/core/: index.html
api/embeddings/: index.html
blog/: 001-introducing-dokime.md  001-introducing-winnow.md  002-scoring-14-datasets.md  audit_results.md  messy_audit_results.md
docs/: index.md
docs/api/: attribution.md  core.md  embeddings.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: attribution.md  cli.md  embeddings.md  filters.md  pipelines.md
examples/: advanced_pipeline.yaml  basic_pipeline.yaml  quickstart.py
experiments/jepa_score/: README.md  dashboard.py  full_results.json  results.md  run_experiment.py  run_full_experiment.py  run_full_gpu.py  test_jepa_score.py  vast_launch.py  vast_setup.sh
experiments/jepa_score/results_A/: baselines.json  full_jacobian_dinov2_vits14.json
experiments/jepa_score/results_A_v2/: baselines.json  full_jacobian_dinov2_vits14.json
experiments/jepa_score/results_B_v2/results_extended/: full_jacobian_dinov2_vitb14.json
experiments/jepa_score/results_C_v2/: baselines_vitl.json  full_jacobian_dinov2_vitl14.json
experiments/jepa_score/results_D/results_extended/: baselines.json  full_jacobian_metaclip_b16.json
experiments/world_model/: README.md  train.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
launch/: reddit_post.md  show_hn.md  twitter_threads.md
search/: search_index.json
spaces/: README.md  app.py  requirements.txt
src/dokime/: __init__.py  _version.py  cli.py
src/dokime/attribution/: __init__.py  engine.py  model_output.py
src/dokime/core/: __init__.py  filters.py  pipeline.py  registry.py
src/dokime/embeddings/: __init__.py  compute.py  dedup.py  search.py
src/dokime/eval/: __init__.py  physics.py
src/dokime/explore/: __init__.py  server.py
src/dokime/explore/static/: index.html
src/dokime/io/: __init__.py  hub.py  readers.py  writers.py
src/dokime/quality/: __init__.py  dedup.py  diagnose.py  report.py  scoring.py
src/dokime/spectral/: __init__.py  analyzer.py
tests/: conftest.py  test_bugfixes.py  test_diagnose.py  test_filters.py  test_io.py  test_pipeline.py  test_scoring.py  test_spectral.py  test_streaming.py
tests/fixtures/: eval_sample.jsonl  sample.jsonl  train_sample.jsonl
user-guide/attribution/: index.html
user-guide/cli/: index.html
user-guide/embeddings/: index.html
user-guide/filters/: index.html
user-guide/pipelines/: index.html
